--- a/Automation/test-output/emailable-report.html
+++ b/Automation/test-output/emailable-report.html
@@ -1,58 +1,37 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml"><head><title>TestNG Report</title><style type="text/css">table {margin-bottom:10px;border-collapse:collapse;empty-cells:show}th,td {border:1px solid #009;padding:.25em .5em}th {vertical-align:bottom}td {vertical-align:top}table a {font-weight:bold}.stripe td {background-color: #E6EBF9}.num {text-align:right}.passedodd td {background-color: #3F3}.passedeven td {background-color: #0A0}.skippedodd td {background-color: #DDD}.skippedeven td {background-color: #CCC}.failedodd td,.attn {background-color: #F33}.failedeven td,.stripe .attn {background-color: #D00}.stacktrace {white-space:pre;font-family:monospace}.totop {font-size:85%;text-align:center;border-bottom:2px solid #000}</style></head><body><table><tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr><tr><th colspan="7">Default suite</th></tr><tr><td><a href="#t0">Default test</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">2</td><td class="num">4,035</td><td></td><td></td></tr></table><table><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="2">Test1</td><td><a href="#m0">Heal1</a></td><td rowspan="1">1498117878389</td><td rowspan="1">2013</td></tr><tr class="failedeven"><td><a href="#m1">Yandex1</a></td><td rowspan="1">1498117880406</td><td rowspan="1">2003</td></tr></tbody></table><h2>Default test</h2><h3 id="m0">Test1#Heal1</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
-    at Test1.invokeBrowser(Test1.java:23)
-    at Test1.Heal1(Test1.java:6)
-    at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-    at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
-    at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
-    at java.lang.reflect.Method.invoke(Method.java:498)
-    at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:104)
-    at org.testng.internal.Invoker.invokeMethod(Invoker.java:645)
-    at org.testng.internal.Invoker.invokeTestMethod(Invoker.java:851)
-    at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:1177)
-    at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:129)
-    at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:112)
-    at org.testng.TestRunner.privateRun(TestRunner.java:756)
-    at org.testng.TestRunner.run(TestRunner.java:610)
-    at org.testng.SuiteRunner.runTest(SuiteRunner.java:387)
-    at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:382)
-    at org.testng.SuiteRunner.privateRun(SuiteRunner.java:340)
-    at org.testng.SuiteRunner.run(SuiteRunner.java:289)
-    at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
-    at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:86)
-    at org.testng.TestNG.runSuitesSequentially(TestNG.java:1293)
-    at org.testng.TestNG.runSuitesLocally(TestNG.java:1218)
-    at org.testng.TestNG.runSuites(TestNG.java:1133)
-    at org.testng.TestNG.run(TestNG.java:1104)
-    at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:132)
-    at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:230)
-    at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:76)
-</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p><h3 id="m1">Test1#Yandex1</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.NullPointerException
-    at Test1.invokeBrowser(Test1.java:23)
-    at Test1.Yandex1(Test1.java:12)
-    at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-    at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
-    at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
-    at java.lang.reflect.Method.invoke(Method.java:498)
-    at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:104)
-    at org.testng.internal.Invoker.invokeMethod(Invoker.java:645)
-    at org.testng.internal.Invoker.invokeTestMethod(Invoker.java:851)
-    at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:1177)
-    at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:129)
-    at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:112)
-    at org.testng.TestRunner.privateRun(TestRunner.java:756)
-    at org.testng.TestRunner.run(TestRunner.java:610)
-    at org.testng.SuiteRunner.runTest(SuiteRunner.java:387)
-    at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:382)
-    at org.testng.SuiteRunner.privateRun(SuiteRunner.java:340)
-    at org.testng.SuiteRunner.run(SuiteRunner.java:289)
-    at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
-    at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:86)
-    at org.testng.TestNG.runSuitesSequentially(TestNG.java:1293)
-    at org.testng.TestNG.runSuitesLocally(TestNG.java:1218)
-    at org.testng.TestNG.runSuites(TestNG.java:1133)
-    at org.testng.TestNG.run(TestNG.java:1104)
-    at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:132)
-    at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:230)
-    at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:76)
-</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p></body></html>
+<html xmlns="http://www.w3.org/1999/xhtml"><head><title>TestNG Report</title><style type="text/css">table {margin-bottom:10px;border-collapse:collapse;empty-cells:show}th,td {border:1px solid #009;padding:.25em .5em}th {vertical-align:bottom}td {vertical-align:top}table a {font-weight:bold}.stripe td {background-color: #E6EBF9}.num {text-align:right}.passedodd td {background-color: #3F3}.passedeven td {background-color: #0A0}.skippedodd td {background-color: #DDD}.skippedeven td {background-color: #CCC}.failedodd td,.attn {background-color: #F33}.failedeven td,.stripe .attn {background-color: #D00}.stacktrace {white-space:pre;font-family:monospace}.totop {font-size:85%;text-align:center;border-bottom:2px solid #000}</style></head><body><table><tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr><tr><th colspan="7">Critical Path</th></tr><tr><td><a href="#t0">Login and Register</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">3</td><td class="num">14,664</td><td></td><td></td></tr></table><table><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Critical Path</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Login and Register &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">patient.tests.AddCardTest</td><td><a href="#m0">checkPofilesPageElements</a></td><td rowspan="1">1500331931867</td><td rowspan="1">3837</td></tr><tr class="failedodd"><td rowspan="2">patient.tests.LoginTest</td><td><a href="#m1">checkMenuLinksLoggedIn</a></td><td rowspan="1">1500331931867</td><td rowspan="1">9161</td></tr><tr class="failedodd"><td><a href="#m2">loginWithValidCredentials</a></td><td rowspan="1">1500331941128</td><td rowspan="1">5278</td></tr></tbody></table><h2>Login and Register</h2><h3 id="m0">patient.tests.AddCardTest#checkPofilesPageElements</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>https://patient.qa.heal.com/login</td></tr><tr><th>Messages</th></tr><tr><td><div class="messages">waitForVisible():  {oUserNameInput}, {By.name: username}<br/>waitForElement():  {oUserNameInput}, {By.name: username}</div></td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.openqa.selenium.StaleElementReferenceException: An element command failed because the referenced element is no longer available. (WARNING: The server did not provide any stacktrace information)
+Command duration or timeout: 18 milliseconds
+For documentation on this error, please visit: http://seleniumhq.org/exceptions/stale_element_reference.html
+Build info: version: &apos;3.4.0&apos;, revision: &apos;unknown&apos;, time: &apos;unknown&apos;
+System info: host: &apos;MacBook-Pro.local&apos;, ip: &apos;fe80:0:0:0:18fe:c6af:4416:88f7%en0&apos;, os.name: &apos;Mac OS X&apos;, os.arch: &apos;x86_64&apos;, os.version: &apos;10.12.5&apos;, java.version: &apos;1.8.0_131&apos;
+Driver info: org.openqa.selenium.safari.SafariDriver
+Capabilities [{applicationCacheEnabled=true, rotatable=false, databaseEnabled=true, handlesAlerts=true, version=12603.2.4, cleanSession=true, platform=MAC, nativeEvents=true, locationContextEnabled=false, webStorageEnabled=true, browserName=safari, javascriptEnabled=true, platformName=macOS, cssSelectorsEnabled=true}]
+Session ID: 602B3E5C-FB62-4BB6-920B-22C70112B8D8
+	at org.openqa.selenium.remote.ErrorHandler.createThrowable(ErrorHandler.java:215)
+	at org.openqa.selenium.remote.ErrorHandler.throwIfResponseFailed(ErrorHandler.java:167)
+	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:671)
+	at org.openqa.selenium.remote.RemoteWebElement.execute(RemoteWebElement.java:272)
+	at org.openqa.selenium.remote.RemoteWebElement.sendKeys(RemoteWebElement.java:96)
+	at framework.web.CommonWebElement.sendKeys(CommonWebElement.java:358)
+	at patient.pages.LoginPage.login(LoginPage.java:60)
+	at patient.tests.AddCardTest.checkPofilesPageElements(AddCardTest.java:26)
+	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1142)
+	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:617)
+	at java.lang.Thread.run(Thread.java:748)
+... Removed 14 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p><h3 id="m1">patient.tests.LoginTest#checkMenuLinksLoggedIn</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>https://patient.qa.heal.com/login</td></tr><tr><th>Messages</th></tr><tr><td><div class="messages">waitForVisible():  {oUserNameInput}, {By.name: username}<br/>waitForElement():  {oUserNameInput}, {By.name: username}<br/>waitForVisible():  {oPasswordInput}, {By.name: password}<br/>waitForElement():  {oPasswordInput}, {By.name: password}<br/>waitForVisible():  {oLoginBtn}, {By.xpath: //button[@type='submit']}<br/>waitForElement():  {oLoginBtn}, {By.xpath: //button[@type='submit']}<br/>waitForElement():  {oLoadingBar}, {By.xpath: //*[@class='md-container md-mode-indeterminate']}<br/>waitForInvisible():  {oLoadingBar}, {By.xpath: //*[@class='md-container md-mode-indeterminate']}<br/>waitForElement():  {oMenuBtn}, {By.xpath: //button[contains(@class,'md-icon-button')]}<br/>waitForElement():  {oHomeLnk}, {By.xpath: //*[@ui-sref='main.body.home']}<br/>waitForElement():  {oLoadingBar}, {By.xpath: //*[@class='md-container md-mode-indeterminate']}<br/>waitForInvisible():  {oLoadingBar}, {By.xpath: //*[@class='md-container md-mode-indeterminate']}<br/>waitForVisible():  {oPageTitle}, {By.xpath: //*[contains(@class,'title')]}<br/>waitForElement():  {oPageTitle}, {By.xpath: //*[contains(@class,'title')]}<br/>"{Verifying Visits page title }" - assertEquals() failed! Actual: "{Scheduled Visits}"  Expected: "{Book Visit}"</div></td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: assertEquals() failed!  Actual: &quot;Scheduled Visits&quot;  Expected: &quot;Book Visit&quot;
+	at framework.validation.CommonValidate.fail(CommonValidate.java:200)
+	at framework.validation.CommonValidate.assertEquals(CommonValidate.java:119)
+	at patient.pages.HomePage.validateTitle(HomePage.java:60)
+	at patient.tests.LoginTest.checkMenuLinksLoggedIn(LoginTest.java:44)
+	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1142)
+	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:617)
+	at java.lang.Thread.run(Thread.java:748)
+... Removed 11 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p><h3 id="m2">patient.tests.LoginTest#loginWithValidCredentials</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>https://patient.qa.heal.com/login</td></tr><tr><th>Messages</th></tr><tr><td><div class="messages">waitForVisible():  {oUserNameInput}, {By.name: username}<br/>waitForElement():  {oUserNameInput}, {By.name: username}<br/>waitForVisible():  {oPasswordInput}, {By.name: password}<br/>waitForElement():  {oPasswordInput}, {By.name: password}<br/>waitForVisible():  {oLoginBtn}, {By.xpath: //button[@type='submit']}<br/>waitForElement():  {oLoginBtn}, {By.xpath: //button[@type='submit']}<br/>waitForVisible():  {oPageTitle}, {By.xpath: //*[contains(@class,'title')]}<br/>waitForElement():  {oPageTitle}, {By.xpath: //*[contains(@class,'title')]}<br/>"{Verifying Visits page title }" - assertEquals() failed! Actual: "{Scheduled Visits}"  Expected: "{Book Visit}"</div></td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: assertEquals() failed!  Actual: &quot;Scheduled Visits&quot;  Expected: &quot;Book Visit&quot;
+	at framework.validation.CommonValidate.fail(CommonValidate.java:200)
+	at framework.validation.CommonValidate.assertEquals(CommonValidate.java:119)
+	at patient.pages.HomePage.validateTitle(HomePage.java:60)
+	at patient.tests.LoginTest.loginWithValidCredentials(LoginTest.java:26)
+	at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1142)
+	at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:617)
+	at java.lang.Thread.run(Thread.java:748)
+... Removed 11 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p></body></html>
